# my_NewMark

./: README.md  build _test on mac & Rostam.md  build _test on mac & Rostam.txt  build in Visual Studio on mac.txt  notebooks_WR (1).ipynb  twomass.cpp
1d_twomass_d_v_a_plots/: 1D_twomass_undamp_dva_plot.ipynb  ReadMe.md  displacement_combined.ipynb  readme.txt
1d_twomass_d_v_a_plots/acceleration data/: Jacobi_WRa_plot_res.csv  U_aN_plot_res.csv  combined_gjn_acceleration.csv
1d_twomass_d_v_a_plots/displacement data/: Gaus_WR_plot_res.csv  U_dN_plot_res.csv  combined_g_j_dispalcement.csv  combined_gjn_displacement.csv  fig4a_displacement.ipynb  figure4a_displacement.ipynb  readme.txt
1d_twomass_d_v_a_plots/velocity data/: Jacobi_WRv_plot_res.csv  U_vN_plot_res.csv  combined_gjn_velocity.csv
2Dsystem/: CMakeLists.txt  readme.md  readme.txt
2Dsystem/data&plot/: 2D_plot.ipynb  readme.txt
2Dsystem/data&plot/2D_data/: 2D_Gaus_WR_plot_res_106.csv  2D_Gaus_WR_plot_res_52.csv  2D_Gaus_WR_plot_res_L108.csv  2D_Newmark_U_dN_plot_res_106.csv
2Dsystem/jacobi_compiled/: 2Djacobi.cpp  2d_jacobi  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  getRes.hpp  preprocess.hpp
2Dsystem/mybuild_src/: CMakeCache.txt  Makefile  cmake_install.cmake
2Dsystem/mybuild_src/src/2DfinerNewmark/: 2DfinerNewm  Makefile  cmake_install.cmake
2Dsystem/mybuild_src/src/2Dgausidel/: 2Dgaus  Makefile  cmake_install.cmake
2Dsystem/mybuild_src/src/2Djacobi/: 2Djaco  Makefile  cmake_install.cmake
2Dsystem/mybuild_src/src/2Dnewmark/: 2Dnewm  Makefile  cmake_install.cmake
2Dsystem/sourcefile/: .nfs000000000038907a00002aab  .nfs000000000038907b00002d8c  .nfs00000000003924440000321d  .nfs000000000039c33e00002d8a  .nfs000000000039c34000002dae  .nfs000000000039c34100002db0  .nfs000000000039c34200002e9f  .nfs000000000039c93200002d89  .nfs000000000039c93800002ead  .nfs000000000039e1a900002d8d  .nfs000000000039ed3300002d8b  .nfs000000000039ed3400002daf  .nfs00000000003a507f00002aac  .nfs00000000003a51b700002ea6  .nfs00000000003a51b900002ec1  .nfs00000000003a523b00002c2c  .nfs00000000003a523e00002e9e  .nfs00000000003a528900002eae  .nfs00000000003a530400002c2d  .nfs00000000003a531100002ec8  .nfs000000000056844a00004c2a  2D_Newmark_U_dN_plot_res_52_faster.csv  2Dfiner_Newmark_refer_sol.cpp  2Dgausidel.cpp  2Djacobi.cpp  2Dnewmark.cpp  CMakeLists.txt  KM.txt  assembly.hpp  e_j_209ite.txt  finer_Newmark.cpp  finer_newmark  jacox  lu.txt  lu2.txt  newmark  preprocess.hpp  readme.txt
2Dsystem/sourcefile/mybuild/: .nfs000000000026a09800004c29  2Dgaus  2Dnewmark  2Dnewmark_finer  CMakeCache.txt  Makefile  cmake_install.cmake
2Dsystem/sourcefile/res/: 2D_Jaco_WR_plot_res_52_faster.csv  2D_Newmark_U_dN_plot_res_106_faster.csv  e_g.txt
2Dsystem/src/: testgmsh.msh
2Dsystem/src/2DfinerNewmark/: 2Dfiner_Newmark_refer_sol.cpp  CMakeLists.txt
2Dsystem/src/2Dgausidel/: 2Dgausidel.cpp  CMakeLists.txt
2Dsystem/src/2Djacobi/: 2Djacobi.cpp  CMakeLists.txt
2Dsystem/src/2Djacobi_gmsh/: 2Djacobi.cpp  CMakeLists.txt
2Dsystem/src/2Djacobi_gmshVtk/: 2Djacobi.cpp  CMakeLists.txt
2Dsystem/src/2Djacobi_gmshVtk/yamlbuild/: 2D_Jaco_WR_newMesh_node1.csv  2D_Jaco_WR_newMesh_node12.csv  2D_Jaco_WR_newMesh_node13.csv  2D_Jaco_WR_newMesh_node14.csv  2D_Jaco_WR_newMesh_node15.csv  2D_Jaco_WR_newMesh_node2.csv  CMakeCache.txt  Makefile  cmake_install.cmake  input.yaml  testGmsh.msh
2Dsystem/src/2Dnewmark/: 2Dnewmark.cpp  CMakeLists.txt
2Dsystem/src/preprocess/: preprocess.hpp
2Dsystem/src/preprocess_gmsh/: assembly.hpp  preprocess.hpp
Gausseidel/: Jacobi_GS__WR_dt.ipynb  readme.txt
Gausseidel/gaussseidel sourcefile/: CMakeCache.txt  CMakeLists.txt  Gdb  Makefile  cmake_install.cmake  gaus  gausseidel.cpp
Jacobi/: readme.txt
Jacobi/Jacobi_ plots/: Jacobi___WR_dt.ipynb  Jacobi___WR_dt.py
Jacobi/Jacobi_sourcefile/: CMakeLists.txt  WR_plot_res.csv  original.m  readme.md  res  two_mass.cpp  twomassGdb
test825/: CMakeCache.txt  Makefile  cmake_install.cmake  readme.md  two_mass.cpp  twomass2
test825/no need exe/: twomass  twomass1  twomassGdb
two_mass/: 2. solved_ issue_coredump.txt  CMakeLists.txt  ReadMe.md  Resolved_Compiler issue ReadMe.md  issue_coredump.txt  two_mass.cpp
workhpx/installhpx/lib64/: libhpx.so.1  libhpx_accumulator.so.1  libhpx_accumulator.so.1.9.0  libhpx_cancelable_action.so.1  libhpx_cancelable_action.so.1.9.0  (+25 more)
(+740 files in other folders)
